deploy/kubernetes/base/application/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opsdesk
  namespace: opsdesk
  labels:
    app.kubernetes.io/name: opsdesk
    app.kubernetes.io/component: application
    app.kubernetes.io/part-of: opsdesk
    app.kubernetes.io/version: 0.7.1
spec:
  replicas: 2
  revisionHistoryLimit: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: opsdesk
      app.kubernetes.io/component: application
  template:
    metadata:
      labels:
        app.kubernetes.io/name: opsdesk
        app.kubernetes.io/component: application
        app.kubernetes.io/part-of: opsdesk
        app.kubernetes.io/version: 0.7.1
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8000"
    spec:
      serviceAccountName: opsdesk
      automountServiceAccountToken: false
      terminationGracePeriodSeconds: 35
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        runAsGroup: 10001
        seccompProfile:
          type: RuntimeDefault
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: opsdesk
              app.kubernetes.io/component: application
      containers:
        - name: opsdesk
          image: opsdesk:0.7.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          startupProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 12
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: tmp
              mountPath: /tmp
      volumes:
        - name: tmp
          emptyDir:
            sizeLimit: 64Mi
